--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
@@ -51,8 +55,13 @@
     "@prisma/client": "^6.12.0",
     "dotenv": "^17.2.1",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "ioredis": "^5.6.1",
+    "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^4.0.10"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "zod": "^4.0.13"
   }
 }
