--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -53,12 +54,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
