--- a/package.json
+++ b/package.json
@@ -56,14 +56,17 @@
     "@prisma/client": "^6.12.0",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/stripe": "^8.0.416",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^4.21.1",
+    "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "stripe": "^18.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
